fix white gap
fix div white gap
change images

--- a/pizzaria_webpage/style.css
+++ b/pizzaria_webpage/style.css
@@ -17,6 +17,7 @@
 body {
   max-width: 100vw;
   min-width: 1440px;
+  
 }
 
 .navbar {
@@ -61,6 +62,7 @@ body {
 .container__Cover {
   margin: 0;
   padding: 0;
+  height: 500px;
 }
 
 .description__Pizza {
@@ -76,7 +78,7 @@ body {
 
 .description__Pizza .description {
   position: absolute;
-  top: 100px;
+  top: 0px;
   left: 150px;
   width: 30vw;
   padding: 30px 20px;
@@ -130,9 +132,10 @@ body {
 .container__Menu {
   width: 100%;
   position: relative;
+  height: 200px;
 }
 
-.menu__Pizza img {
+.container__Menu img {
   object-fit: cover;
   width: 100%;
   height: 200px;
@@ -163,7 +166,7 @@ body {
   display: grid;
   grid-template-columns: auto auto auto;
 }
-
+/* Iamges Left */
 .menu__ItemLeft {
   display: flex;
   max-width: 100%;
@@ -187,6 +190,35 @@ body {
 }
 
 .menu__ItemLeft .right h2 {
+  color: white;
+  font-size: 2rem;
+  margin-bottom: 15px;
+}
+
+/* Images Right */
+.menu__ItemRight {
+  display: flex;
+  max-width: 100%;
+  height: 300px;
+  background-color: rgb(5, 5, 5);
+}
+
+.menu__ItemRight .right {
+  width: 50%;
+}
+
+.menu__ItemRight .right img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.menu__ItemRight .left {
+  width: 50%;
+  padding: 20px 25px;
+}
+
+.menu__ItemRight .left h2 {
   color: white;
   font-size: 2rem;
   margin-bottom: 15px;
